# tidydraws

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  LICENSE_HEADER.txt  Makefile  PRD.md  README.md  great-docs.yml  index.html  index.qmd  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
docs/: _quarto.yml  great-docs.yml
docs/examples/: 01-parameter_draws.qmd  01-spread_draws.qmd  02-add_epred_draws.qmd  02-compare_draws.qmd  02-prediction_draws.qmd  03-compare_draws.qmd  03-prediction_draws.qmd  03-spread_draws_compare.qmd  04-showcase.qmd  _pymc_workflow.py  _showcase_models.py  linear-regression.qmd
docs/user_guide/: 01-quickstart.qmd  01-quickstart.qmd.bak  02-parameter-space.qmd  03-prediction-space.qmd  03-prediction-space.qmd.bak  04-migration-from-arviz.qmd  05-backends.qmd
scripts/: pre-bump.sh
tests/: test_add_epred_draws.py  test_backend_compat.py  test_compare_draws.py  test_parameter_draws.py  test_prediction_draws.py  test_spread_draws.py  test_spread_draws_compare.py  test_summarise.py
tidydraws/: __init__.py  _extract.py  _summarise.py
