[project]
name = "tidydraws"
version = "0.3.0"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Benjamin Vincent" }]
keywords = [
    "bayesian",
    "mcmc",
    "visualisation",
    "dataframe",
    "tidybayes",
    "polars",
    "arviz",
    "draws",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.12"
dependencies = [
    "polars >=0.20",
    "arviz >=1.0",
    "xarray",
    "numpy",
    "pyarrow>=24.0.0",
    "vegafusion-python-embed>=1.6",
]

[project.optional-dependencies]
letsplot = [
    "lets-plot",
]
plotnine = [
    "plotnine",
    "seaborn",
]
altair = [
    "altair>=6.2.2",
    "vegafusion>=2.0",
    "vegafusion-python-embed>=1.6",
    "vl-convert-python>=1.9.0",
]
all = [
    "tidydraws[letsplot]",
    "tidydraws[plotnine]",
    "tidydraws[altair]",
]

dev = [
    "pytest >=8.0",
    "ruff >=0.4",
    "mypy >=1.0",
    "pandas-stubs",
    "prek",
    "ipykernel",
    "quarto >=0.1",
    "great-docs>=0.14.0",
    "plotnine",
    "altair>=6.2.2",
    "vegafusion>=2.0.3",
    "vegafusion-python-embed>=1.6",
    "vl-convert-python>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/drbenvincent/tidydraws"
Repository = "https://github.com/drbenvincent/tidydraws"
Issues = "https://github.com/drbenvincent/tidydraws/issues"
Documentation = "https://drbenvincent.github.io/tidydraws/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "lets-plot",
    "plotnine",
    "pymc>=6.0.1",
    "pytest-cov>=7.1.0",
    "altair>=6.2.2",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0",
]

[tool.ruff]
line-length = 88
extension = { qmd = "markdown" }
include = ["pyproject.toml", "*.py", "*.pyi", "*.ipynb", "*.qmd"]

[tool.ruff.format]
preview = true
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F841"]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--color=yes",
    "--cov=tidydraws",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["tidydraws"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80

[tool.mypy]
files = "tidydraws/*.py"
exclude = "build|dist|docs|tests"
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "arviz.*",
    "xarray.*",
    "numpy.*",
    "pandas.*",
    "polars.*",
]
ignore_missing_imports = true
